2007-10-06 Jonathan Steffan <jon@fedoraunity.org>
     * Check-in from gobby session(s). Time to start making
     everything work.