@@ -3,19 +3,20 @@
 Summary: 	Python version of Jigdo, Modified
 Name: 		pyjigdo
 Version: 	@VERSION@
-Release: 	2.alpha%{?dist}
-License: 	GPLv2
+Release: 	1.alpha%{?dist}
+License: 	GPLv2+
 Group: 		Applications/System
 URL: 		https://hosted.fedoraproject.org/projects/pyjigdo
 Source0: 	http://files.pyjigdo.fedoraunity.org/%{name}-%{version}.tar.gz
 BuildRoot: 	%{_tmppath}/%{name}-%{version}-%{release}-root-%(%{__id_u} -n)
 Requires: 	jigdo
+# this is because we use /var/tmp/jigdo
 BuildArch: 	noarch
 BuildRequires: 	intltool, gettext, python, diffutils
 
 %description
-PyJigdo is a slightly modified version of the popular Jigdo distribution
-framework.
+PyJigdo is a Python rewrite of the popular Jigdo distribution framework. It has
+also been slightly modified to add some extra features.
 
 %prep
 %setup -q
@@ -43,6 +44,11 @@ rm -rf $RPM_BUILD_ROOT
 %config(noreplace) %{_sysconfdir}/pyjigdo/pyjigdo.conf
 
 %changelog
+* Wed Oct 10 2007 Stewart Adam <s.adam a diffingo.com> 0.2-1
+- Split up py files
+- License change from GPLv2 to GPLv2+
+- Make __init__.py's __version__ work based on automake
+
 * Tue Oct 09 2007 Jonathan Steffan <jon a fedoraunity.org> 0.1-2
 - Updated spec to build for alpha test release
 
