@@ -1,3 +1,7 @@
+2007-10-10 Stewart Adam <s.adam@diffingo.com>
+     * Split up files
+     * Relicense to GPLv2+
+
 2007-10-06 Jonathan Steffan <jon@fedoraunity.org>
      * Check-in from gobby session(s). Time to start making
      everything work.
